# Frappe_signage

./: README.md  hooks.py  pyproject.toml  requirements.txt
signage_display/: hooks.py  patches.txt
signage_display/install/: install.py
signage_display/patches/: enable_new_button_on_doctypes.py
signage_display/public/css/: display.css
signage_display/public/js/: display.js
signage_display/signage_display/doctype/content/: content.js  content.json  content.py
signage_display/signage_display/doctype/playlist/: playlist.js  playlist.json  playlist.py
signage_display/signage_display/doctype/playlist_item/: playlist_item.json  playlist_item.py
signage_display/signage_display/doctype/schedule_rule/: schedule_rule.json  schedule_rule.py
signage_display/signage_display/doctype/screen/: screen.js  screen.json  screen.py
signage_display/signage_display/doctype/screen_group/: screen_group.js  screen_group.json  screen_group.py
signage_display/signage_display/doctype/screen_schedule/: screen_schedule.json  screen_schedule.py
signage_display/signage_display/doctype/signage/: signage.js  signage.json  signage.py
signage_display/signage_display/doctype/signage_schedule/: signage_schedule.js  signage_schedule.json  signage_schedule.py
signage_display/www/: display.css  display.html  display.js  display.py
