[project]
name = "signage_display"
authors = [
    {name = "H.P. Automation Pvt. Ltd.", email = "ravi.kaneria@hpautomation.in"}
]
description = "Digital Signage Display for H.P. Automation"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]
dependencies = ["PyMuPDF>=1.23.0"]

[tool.flit.module]
name = "signage_display"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
